[gd_scene load_steps=35 format=3 uid="uid://cjsk6cscacweo"]

[ext_resource type="Texture2D" uid="uid://e5cdh3us7ws3" path="res://Assets/Enemies/Skeleton Archer/Skeleton Archer-Attack.png" id="1_c23kj"]
[ext_resource type="Script" path="res://Scripts/Enemies_Scripts/skeleton_archer.gd" id="1_f8aoo"]
[ext_resource type="Texture2D" uid="uid://d1hh7ktnod0em" path="res://Assets/Enemies/Skeleton Archer/Skeleton Archer-Death.png" id="2_6ymig"]
[ext_resource type="Texture2D" uid="uid://iewciabtkr03" path="res://Assets/Enemies/Skeleton Archer/Skeleton Archer-Hurt.png" id="3_c5at0"]
[ext_resource type="Texture2D" uid="uid://bto6xc3nli0wo" path="res://Assets/Enemies/Skeleton Archer/Skeleton Archer-Walk.png" id="4_b6aqi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iesa7"]
atlas = ExtResource("1_c23kj")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_be5c1"]
atlas = ExtResource("1_c23kj")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgp7j"]
atlas = ExtResource("1_c23kj")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aputd"]
atlas = ExtResource("1_c23kj")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uqpu"]
atlas = ExtResource("1_c23kj")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6dw8"]
atlas = ExtResource("1_c23kj")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0mk5"]
atlas = ExtResource("1_c23kj")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_heqsc"]
atlas = ExtResource("1_c23kj")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_th8ix"]
atlas = ExtResource("1_c23kj")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngsj7"]
atlas = ExtResource("2_6ymig")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3khl"]
atlas = ExtResource("2_6ymig")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2lpp"]
atlas = ExtResource("2_6ymig")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajgbg"]
atlas = ExtResource("2_6ymig")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldwmg"]
atlas = ExtResource("3_c5at0")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_36d6g"]
atlas = ExtResource("3_c5at0")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa12n"]
atlas = ExtResource("3_c5at0")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf6iu"]
atlas = ExtResource("3_c5at0")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqdvv"]
atlas = ExtResource("4_b6aqi")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmt4m"]
atlas = ExtResource("4_b6aqi")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s1po"]
atlas = ExtResource("4_b6aqi")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_op6vf"]
atlas = ExtResource("4_b6aqi")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x85u7"]
atlas = ExtResource("4_b6aqi")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wuwo"]
atlas = ExtResource("4_b6aqi")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_78d01"]
atlas = ExtResource("4_b6aqi")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aigau"]
atlas = ExtResource("4_b6aqi")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_tvokx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iesa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_be5c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgp7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aputd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uqpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6dw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0mk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heqsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th8ix")
}],
"loop": false,
"name": &"ATTACK1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngsj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3khl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2lpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajgbg")
}],
"loop": false,
"name": &"DEATH",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldwmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36d6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa12n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf6iu")
}],
"loop": false,
"name": &"HURT",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqdvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmt4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s1po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op6vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x85u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wuwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78d01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aigau")
}],
"loop": true,
"name": &"WALK",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_or08a"]
radius = 9.05539

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1iga"]
size = Vector2(13, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_8bheu"]
radius = 79.3095

[node name="SkeletonArcher" type="CharacterBody2D"]
platform_floor_layers = 4294901760
script = ExtResource("1_f8aoo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(34, 29)
sprite_frames = SubResource("SpriteFrames_tvokx")
animation = &"ATTACK1"
frame = 8
frame_progress = 1.0

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(36, 29)
shape = SubResource("CircleShape2D_or08a")

[node name="AttackZone" type="Area2D" parent="."]

[node name="Attack1" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(53, 28.5)
shape = SubResource("RectangleShape2D_u1iga")

[node name="DetectZone" type="Area2D" parent="."]

[node name="DetectShape" type="CollisionShape2D" parent="DetectZone"]
position = Vector2(35, 29)
shape = SubResource("CircleShape2D_8bheu")

[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
